syntax = "proto3";

package svcApi;

option go_package = "./proto/svcApi;svcApi";

service SvcApi {
    rpc FindSvcById(Request) returns (Response){}
	rpc AddSvc(Request) returns (Response){}
	rpc DeleteSvcById(Request) returns (Response){}
	rpc UpdateSvc(Request) returns (Response){}
	//默认接口
	rpc Call(Request) returns (Response){}
}

message Pair {
	string key = 1;
	repeated string values = 2;
}


message Request {
	string method = 1;
	string path = 2;
	map<string, Pair> header = 3;
	map<string, Pair> get = 4;
	map<string, Pair> post = 5;
	string body = 6;
	string url = 7;
}


message Response {
	int32 statusCode = 1;
	map<string, Pair> header = 2;
	string body = 3;
}

